Adição de logs e ajustes nas mensagens